fix spacing issue

--- a/week6/todo.css
+++ b/week6/todo.css
@@ -6,8 +6,8 @@ header {
 
 }
 #todocontainer {
-    width: 250px; 
-    height: 350px;
+    width: 350px; 
+    height: 450px;
     border: 5px purple solid;
     align-content: center;
     margin: 20px;
